--- a/projectmanagement/src/main/resources/templates/add-task.html
+++ b/projectmanagement/src/main/resources/templates/add-task.html
@@ -11,7 +11,7 @@
     <table border="3">
         <tr>
             <td><label>Name</label></td>
-            <td><input type= text" th:field="*{name}" /></td>
+            <td><input type= "text" th:field="*{name}" /></td>
         </tr>
         <tr>
             <td><label>Description:</label></td>
