--- a/projectmanagement/src/main/resources/templates/project.html
+++ b/projectmanagement/src/main/resources/templates/project.html
@@ -13,6 +13,7 @@
 
 <li th:each="project: ${project}">
     <p th:text="${project.name}"/>
+    <p th:yrxt="${project.description}"/>
 </li>
 
 </body>
