--- a/projectmanagement/src/main/resources/templates/user.html
+++ b/projectmanagement/src/main/resources/templates/user.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html
         xmlns:th="http://www.thymeleaf.org"
-        xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>All users</title>
@@ -12,7 +12,11 @@
 <p>Please see below all the users assigned for the projects</p>
 
 <li th:each="user: ${user}">
-    <p th:text=user.displayed_name}"/>
+    <p th:text="user: ${login}"/>
+    <p th:text="user: ${password}"/>
+    <p th:text="user:${email}"/>
+    <p th:text="user:${displayed_name}"/>
+
 </li>
 
 </body>
