New status for task methods

--- a/projectmanagement/src/main/resources/templates/add-task.html
+++ b/projectmanagement/src/main/resources/templates/add-task.html
@@ -15,11 +15,13 @@
         </tr>
         <tr>
             <td><label>Description:</label></td>
-            <td><input type= text" th:field="*{description}" /></td>
+            <td><input type= "text" th:field="*{description}" /></td>
         </tr>
         <tr>
             <td><input type= "submit" value="Submit" /></td>
         </tr>
+    </table>
 </form>
+
 </body>
 </html>
