--- a/projectmanagement/src/main/resources/templates/edit-task.html
+++ b/projectmanagement/src/main/resources/templates/edit-task.html
@@ -20,7 +20,7 @@
         </tr>
         <tr>
             <td><label>Description:</label></td>
-            <td><input type= text" th:field="*{description}" /></td>
+            <td><input type= "text" th:field="*{description}" /></td>
         </tr>
         <tr>
             <td><input type= "submit" value="Edit" /></td>
