--- a/projectmanagement/src/main/resources/templates/add-sprint.html
+++ b/projectmanagement/src/main/resources/templates/add-sprint.html
@@ -9,21 +9,18 @@
 <p>Add sprint</p>
 <form action="#" th:action="@{/sprint/add}" th:object="${newSprint}" method="post">
     <table border="1">
-        <tr>
-            <td><label> Name</label></td>
-            <td><input type="text" th:field="*{name}" /></td>
-        </tr>
+
         <tr>
             <td><label>Date from:</label></td>
-            <td><input type="text" th:field="*{Date from}" /></td>
+            <td><input type="date" th:field="*{dateFrom}" /></td>
         </tr>
         <tr>
             <td><label>Date to:</label></td>
-            <td><input type="text" th:field="*{Date to}" /></td>
+            <td><input type="date" th:field="*{dateTo}" /></td>
         </tr>
         <tr>
             <td><label>Planned Story Points:</label></td>
-            <td><input type="text" th:field="*{Planned Story Points}" /></td>
+            <td><input type="text" th:field="*{plannedStoryPoints}" /></td>
         </tr>
         <tr>
             <td><input type="submit" value="Submit" /></td>
