--- a/projectmanagement/src/main/resources/templates/project.html
+++ b/projectmanagement/src/main/resources/templates/project.html
@@ -8,6 +8,7 @@
     <title>My projects</title>
 </head>
 <body>
+<a th:href="@{/add-project}"><button>Add project</button></a>
 
 <p>Here are my projects</p>
 
@@ -15,6 +16,8 @@
     <p th:text="'Id:' + ${project.id}"/>
     <p th:text="'Name:' + ${project.name}"/>
     <p th:text="'Description:' + ${project.description}"/>
+    <a th:href="@{/edit-project/{id}(id = ${project.id})}"><button>Edit</button></a>
+    <a th:href="@{/delete-project/{id}(id = ${project.id})}"><button>Delete</button></a>
 </li>
 
 </body>
