Edit-task updated

--- a/projectmanagement/src/main/resources/templates/edit-task.html
+++ b/projectmanagement/src/main/resources/templates/edit-task.html
@@ -23,19 +23,19 @@
             <td><input type="text" th:field="*{description}"/></td>
         </tr>
         <tr>
-            <td><label>Description:</label></td>
+            <td><label>Sprint:</label></td>
             <td><input type="text" th:field="*{sprint}"/></td>
         </tr>
         <tr>
-            <td><label>Description:</label></td>
+            <td><label>Weight:</label></td>
             <td><input type="text" th:field="*{weight}"/></td>
         </tr>
         <tr>
-            <td><label>Description:</label></td>
+            <td><label>StoryPoints:</label></td>
             <td><input type="text" th:field="*{storyPoints}"/></td>
         </tr>
         <tr>
-            <td><label>Description:</label></td>
+            <td><label>Progress:</label></td>
             <td><input type="text" th:field="*{progress}"/></td>
         </tr>
         <tr>
