--- a/projectmanagement/src/main/resources/templates/edit-sprint.html
+++ b/projectmanagement/src/main/resources/templates/edit-sprint.html
@@ -9,6 +9,10 @@
 <form action="#" th:action="@{/sprint/edit}" th:object="${sprintToBeEdit}" method="post">
     <table border="1">
         <tr>
+            <td><label>Id:</label></td>
+            <td ><input readonly type="text" th:field="*{id}" /></td>
+        </tr>
+        <tr>
             <td><label>Date from:</label></td>
             <td><input type="date" th:field="*{dateFrom}" /></td>
         </tr>
