--- a/projectmanagement/src/main/resources/templates/edit-participation.html
+++ b/projectmanagement/src/main/resources/templates/edit-participation.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit page</title>
 </head>
-<body>
+<p>Edit participation</p>
+<form action="#" th:action="@{/participationInProject/edit}" th:object="${participationInProjectToBeEdit}" method="post">
+    <table border="1">
+        <tr>
+            <td><label>Id</label></td>
+            <td><input type="id" th:field="*{id}" /></td>
+        </tr>
 
+        <tr>
+            <td><input type="submit" value="Edit" /></td>
+        </tr>
+    </table>
+    </table>
+</form>
 </body>
 </html>
