--- a/projectmanagement/src/main/resources/templates/add-project.html
+++ b/projectmanagement/src/main/resources/templates/add-project.html
@@ -26,7 +26,7 @@
             </div>
             <select id="inputGroupSelect2" class="custom-select" th:field="${newProject.user.id}">
                 <option selected th:value="null">Choose</option>
-                <option th:each="user : ${user}" th:value="${user.id}" th:text="${user.name}"></option>
+                <option th:each="user : ${user}" th:value="${user.id}" th:text="${user.displayed_name}"></option>
             </select>
         </div>
     </table>
