--- a/projectmanagement/src/main/resources/templates/add-task.html
+++ b/projectmanagement/src/main/resources/templates/add-task.html
@@ -52,6 +52,15 @@
         <tr>
             <td><input type= "submit" value="Submit" /></td>
         </tr>
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+                <label class="input-group-text" for="inputGroupSelect2">User</label>
+            </div>
+            <select id="inputGroupSelect2" class="custom-select" th:field="${newTask.user.id}">
+                <option selected th:value="null">Choose</option>
+                <option th:each="user : ${user}" th:value="${user.id}" th:text="${user.displayed_name}"></option>
+            </select>
+        </div>
     </table>
 </form>
 
