--- a/projectmanagement/src/main/resources/templates/edit-user.html
+++ b/projectmanagement/src/main/resources/templates/edit-user.html
@@ -1,10 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit User</title>
 </head>
 <body>
-
+<p>Edit User</p>
+<form action="#" th:action="@{/user/edit}" th:object="${userToBeEdited}" method="post">
+    <table border="1">
+        <tr>
+            <td><label> Id</label>
+            </td>
+            <td ><input readonly type="text" th:field="*{userId}" /></td>
+        </tr>
+        <tr>
+            <td><label> Login</label></td>
+            <td><input type="text" th:field="*{login}" /></td>
+        </tr>
+        <tr>
+            <td><label>Password:</label></td>
+            <td><input type="text" th:field="*{password}" /></td>
+        </tr>
+        <tr>
+            <td><label>Email:</label></td>
+            <td><input type="text" th:field="*{email}" /></td>
+        </tr>
+        <tr>
+            <td><label>Displayed Name:</label></td>
+            <td><input type="text" th:field="*{displayedName}" /></td>
+        </tr>
+        <tr>
+            <td><input type="submit" value="Edit" /></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
