spring security, register, login

--- a/projectmanagement/src/main/resources/templates/edit-user.html
+++ b/projectmanagement/src/main/resources/templates/edit-user.html
@@ -11,7 +11,7 @@
         <tr>
             <td><label> Id</label>
             </td>
-            <td ><input readonly type="text" th:field="*{userId}" /></td>
+            <td ><input readonly type="text" th:field="*{Id}" /></td>
         </tr>
         <tr>
             <td><label> Login</label></td>
@@ -27,7 +27,7 @@
         </tr>
         <tr>
             <td><label>Displayed Name:</label></td>
-            <td><input type="text" th:field="*{displayedName}" /></td>
+            <td><input type="text" th:field="*{displayed_name}" /></td>
         </tr>
         <tr>
             <td><input type="submit" value="Edit" /></td>
