--- a/projectmanagement/src/main/resources/templates/project.html
+++ b/projectmanagement/src/main/resources/templates/project.html
@@ -51,7 +51,10 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true" th:text="'Welcome, ' + ${loggedUser}"></a>
+                </li>
+                <li class="nav-item">
+                    <a aria-disabled="true" class="nav-link" tabindex="-1" th:href="@{/logout}">Logout</a>
                 </li>
             </ul>
             <form class="d-flex">
