edit-user merge

--- a/projectmanagement/src/main/resources/templates/edit-user.html
+++ b/projectmanagement/src/main/resources/templates/edit-user.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <p>Edit User</p>
-<form action="#" th:action="@{/user/edit}" th:object="${userToBeEdited}" method="post">
+<form action="#" th:action="@{/user/edit}" th:object="${userToBeEdit}" method="post">
     <table border="1">
         <tr>
             <td><label> Id</label>
