--- a/projectmanagement/src/main/resources/templates/project.html
+++ b/projectmanagement/src/main/resources/templates/project.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" lang="en">
 <head>
@@ -82,6 +81,7 @@
                 <h5 class="card-title"  th:text="${project.name}" ></h5>
                 <p class="card-text" th:text="'Id:' + ${project.id}"/>
                 <p class="card-text" th:text="${project.description}"></p>
+<!--                <p class="card-text" th:text="${user.displayed_name}"></p>-->
                 <a th:href="@{/delete-project/{id}(id = ${project.id})}" class="btn btn-danger">Delete</a>
                 <a th:href="@{/edit-project/{id}(id = ${project.id})}" class="btn btn-primary">Edit</a>
             </div>
