--- a/projectmanagement/src/main/resources/templates/project.html
+++ b/projectmanagement/src/main/resources/templates/project.html
@@ -81,6 +81,7 @@
                 <h5 class="card-title"  th:text="${project.name}" ></h5>
                 <p class="card-text" th:text="'Id:' + ${project.id}"/>
                 <p class="card-text" th:text="${project.description}"></p>
+               <p class="card-text" th:text="${project.userEntity.displayed_name}"></p>
 <!--                <p class="card-text" th:text="${user.displayed_name}"></p>-->
                 <a th:href="@{/delete-project/{id}(id = ${project.id})}" class="btn btn-danger">Delete</a>
                 <a th:href="@{/edit-project/{id}(id = ${project.id})}" class="btn btn-primary">Edit</a>
